tests/build/cases/widget/declared_property_expected_type.stderr
error: unexpected token
 --> $DIR/declared_property_expected_type.rs:6:13
  |
6 |         foo(10);
  |             ^^
